fix(web)!: enlarge gap between icon and label in the Item

--- a/packages/web/src/scss/components/Item/_theme.scss
+++ b/packages/web/src/scss/components/Item/_theme.scss
@@ -3,7 +3,7 @@
 
 $alignment-y-dictionary: dictionaries.$alignments-y;
 $breakpoints: tokens.$breakpoints;
-$gap: tokens.$space-500;
+$gap: tokens.$space-700;
 $padding-x: tokens.$space-700;
 $padding-y: tokens.$space-500;
 
